--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -186,7 +186,7 @@ $colError: #FF6161;
 }
 .messages {
     padding: 15px 16px;
-    border: 1px solid red;
+    // border: 1px solid red;
     width: 100%;
     height: fit-content;
     min-height: 100%;
