--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -405,3 +405,24 @@ $colError: #FF6161;
         color: white;
     }
 }
+
+// LOADER
+.typing_indicator {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 10px;
+    padding-left: 30px;
+}
+.dot {
+    width: 10px;
+    height: 10px;
+    background-color: $col1;
+    border-radius: 50%;
+    margin-right: 5px;
+    animation: typing 0.3s infinite alternate;
+}
+@keyframes typing {
+    0% { transform: scale(1); }
+    100% { transform: scale(0.7); }
+}
