--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -426,3 +426,29 @@ $colError: #FF6161;
     0% { transform: scale(1); }
     100% { transform: scale(0.7); }
 }
+
+// NOTIF
+.notify {
+    background-color: $col1;
+    color: white;
+    width: fit-content;
+    height: fit-content;
+    padding: 10px 15px;
+    font-size: 14px;
+    font-family: font_M;
+    border-radius: 5px;
+    position: fixed;
+    bottom: 50px;
+    left: 50px;
+    z-index: 10;
+    animation: up 0.3s;
+    box-shadow: 0px 10px 30px 0px #01596368;
+}
+@keyframes up {
+    0% { bottom: -1px; left: 50px}
+    100% { bottom: 50px; left: 50px;}
+}
+.success {
+    background-color: $col5;
+    color: $col2;
+}
