--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -453,3 +453,57 @@ $colError: #FF6161;
     background-color: $col5;
     color: $col2;
 }
+
+// Date Range
+.dateRange {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin-top: 20px;
+}
+.selected {
+    background-color: $col1;
+    color: white;
+    padding: 8px 15px;
+    font-size: 12px;
+    border-radius: 5px 0 0 5px;
+    transition: 0.3s;
+    white-space: nowrap;
+    &:hover {
+        transition: 0.3s;
+        background-color: $col2;
+    }
+    width: 105px;
+}
+.dates {
+    background-color: $col7;
+    padding: 8px 15px;
+    font-size: 12px;
+    border-radius: 0 5px 5px 0;
+    white-space: nowrap;
+    width: calc(100% - 105px);
+}
+.selection {
+    position: absolute;
+    top: 35px;
+    left: 14px;
+    background-color: white;
+    border-radius: 5px;
+    padding: 5px;
+    box-shadow: 0px 0px 10px 0px #0000003f;
+}
+.select {
+    background-color: white;
+    padding: 8px 15px;
+    font-size: 12px;
+    border-radius: 5px;
+    transition: 0.3s;
+    cursor: pointer;
+    &:hover {
+        border-radius: 5px;
+        transition: 0.3s;
+        background-color: $col1;
+        color: white;
+    }
+}
