--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -80,10 +80,11 @@ h6 {
 $col1: #00B8A8;
 $col2: #015963;
 $col3: #3C4041;
-$col4: #11F3E0;
+$col4: #10f3e0;
 $col5: #CAF0C1;
 $col6: #F2FBFA;
 $col7: #EEEEEE;
+$col8: #868686;
 
 $border: #D0D5DD;
 
@@ -161,16 +162,39 @@ $colError: #FF6161;
 }
 .head_btn {
     border-radius: 5px;
-    background-color: $col4;
+    background-color: $col2;
+    border: 1px solid $col2;
+    color: white;
+    padding: 8px 15px;
+    font-size: 14px;
+    margin-left: 5px;
+    margin-right: 5px;
+    white-space: nowrap;
+    transition: 0.3s;
+    &:hover {
+        border: 1px solid $col5;
+        background-color: $col5;
+        color: $col3;
+        transition: 0.3s;
+    }
+}
+.head_btn_menu {
+    border-radius: 5px;
+    background-color: $col6;
+    border: 1px solid  $col6;
     color: $col2;
     padding: 8px 15px;
     font-size: 14px;
     margin-left: 5px;
     margin-right: 5px;
     white-space: nowrap;
-}
-.special_btn {
-    background-color: $col5;
+    transition: 0.3s;
+    &:hover {
+        border: 1px solid $col2;
+        background-color: $col2;
+        color: white;
+        transition: 0.3s;
+    }
 }
 .icon_btn {
     background-color: transparent;
@@ -801,4 +825,36 @@ $colError: #FF6161;
     width: 100%;
     height: 2px;
     background-color: $col1;
+}
+
+// NOTICES
+.notice_container {
+    width: 100%;
+    padding: 20px 50px;
+
+}
+.notice_img {
+    margin: auto;
+    width: 170px;
+    height: 170px;
+    background-image: url("../assets/svg/no_history.svg");
+    background-position: center;
+    background-size: 90%;
+    background-repeat: no-repeat;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.notice_title {
+    color: $col8;
+    font-size: 25px;
+    font-family: font_M;
+    text-align: center;
+    width: 100%;
+}
+.notice_sub {
+    color: $col8;
+    font-size: 16px;
+    font-family: font_R;
+    text-align: center;
+    width: 100%;
 }
