--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -91,13 +91,6 @@ $border: #D0D5DD;
 $colError: #FF6161;
 
 // INDEX
-.login_page {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .mainPage {
     width: 100vw;
     height: 100vh;
@@ -556,14 +549,40 @@ $colError: #FF6161;
 }
 
 // LOGIN
-.login_page {
-    width:  100vw;
-    height: 100vh;
+.modal_bg {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 101;
+    width: 100%;
+    height: 100%;
+    background: #344054b3;
+    backdrop-filter: blur(8px);
+}
+.close_modal_btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    background-color: $col1;
+    color: white;
+    font-size: 20px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
+    cursor: pointer;
+    transition: 0.3s;
+    &:hover {
+        transition: 0.3s;
+        color: white;
+        background-color: $colError;
+    }
 }
 .login_card {
+    background-color: white;
+    margin: auto;
     width: 500px;
     height: auto;
     padding: 30px;
