--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -393,6 +393,35 @@ $colError2: #bd4747;
         color: #cae0de;
     }
 }
+.input_unit_choices {
+    // border: 1px solid red;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-top: 10px;
+}
+.unit_choice {
+    margin-left: 5px;
+    border-radius: 100px;
+    background-color: transparent;
+    border: 1px solid $col2;
+    color: $col2;
+    padding: 5px 10px;
+    font-size: 12px;
+    transition: 0.3s;
+    &:hover {
+        transition: 0.3s;
+        background-color: $col2;
+        border: 1px solid $col2;
+        color: white;
+    }
+}
+.unit_choice_actv {
+    background-color: $col2;
+    border: 1px solid $col2;
+    color: white;
+}
 // .input_custom:first-letter {
 //     text-transform: capitalize;
 // }
@@ -432,6 +461,9 @@ $colError2: #bd4747;
 .card_col_gap {
     width: 10px;
     height: 100%;
+}
+.card_col {
+    width: 100%;
 }
 .btn_negative {
     padding: 10px 10px;
@@ -972,6 +1004,13 @@ $colError2: #bd4747;
     justify-content: center;
     padding: 20px;
 }
+.select_settings_container_2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 44px;
+    padding: 10px;
+}
 .selected_setting {
     width: 100%;
     height: 38px;
@@ -982,6 +1021,32 @@ $colError2: #bd4747;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.selected_setting_2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    padding: 0px;
+    min-width: 150px;
+    border: 0px;
+    .button_div1, .button_div2 {
+        display: flex;
+        align-items: center;
+        color: $col3;
+        font-size: 14px;
+        font-family: font_R;
+    }
+    .button_div1 {
+        justify-content: flex-start;
+        padding-left: 0px;
+        padding-right: 10px;
+    }
+    .button_div2 {
+        padding-left: 10px;
+        padding-right: 0px;
+        justify-content: flex-end;
+    }
 }
 .button_div1, .button_div2 {
     width: 50%;
