--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -465,6 +465,11 @@ $colError2: #bd4747;
 .card_col {
     width: 100%;
 }
+// .card_col_2 {
+//     width: 100%;
+//     padding-left: 10px;
+//     padding-right: 10px;
+// }
 .btn_negative {
     padding: 10px 10px;
     font-size: 14px;
