--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -1024,6 +1024,9 @@ $colError2: #bd4747;
     height: 44px;
     padding: 10px;
 }
+.select_settings_container_3 {
+    width: auto;
+}
 .selected_setting {
     width: 100%;
     height: 38px;
@@ -1093,6 +1096,19 @@ $colError2: #bd4747;
     box-shadow: 0px 0px 10px 0px #0000003f;
     z-index: 100;
 }
+.options_container_3 {
+    position: absolute;
+    top: 0px;
+    left: 21px;
+    width: auto;
+    height: auto;
+    background-color: white;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    box-shadow: 0px 0px 10px 0px #0000003f;
+    z-index: 100;
+}
 .side_btn_icon_2 {
     min-width: 38px;
     height: 38px;
@@ -1138,6 +1154,17 @@ $colError2: #bd4747;
             color: white;
         }
     }
+    &:hover {
+        .select_button {
+            color: white;
+        }
+    }
+}
+.select_button {
+    width: 100%;
+    background-color: transparent;
+    color: $col1;
+    border: 0px;
 }
 .settings_component {
     height: calc(100% - 138px);
