--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -606,6 +606,7 @@ $colError2: #bd4747;
     width: calc(100% - 105px);
 }
 .selection {
+    z-index: 1;
     position: absolute;
     top: 35px;
     left: 0px;
@@ -1396,7 +1397,9 @@ $colError2: #bd4747;
     background-color: white;
     padding: 10px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #00000028
+    // box-shadow: 0px 0px 10px 0px #00000028;
+    border: 1px solid $border2;
+    margin-bottom: 10px;
 }
 .history_datetime {
     display: flex;
@@ -1433,6 +1436,17 @@ $colError2: #bd4747;
         background-color: $col1;
         color: white;
     }
+}
+.history_title2 {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 12px;
+    font-family: font_M;
+    padding: 10px 15px;
+    background-color: $border2;
+    border-radius: 8px;
 }
 
 // PLANS
@@ -1529,6 +1543,7 @@ $colError2: #bd4747;
     margin-top: 10px;
 }
 .payment_code {
+    width: 100%;
     background-color: white;
     padding: 15px 20px;
     font-size: 12px;
