See if patient_form is empty before sending | Remove all local storage | add purchase_amount to payment details | take completion token from localstorage

--- a/assets/mainStyle.scss
+++ b/assets/mainStyle.scss
@@ -446,7 +446,8 @@ $colError2: #bd4747;
     padding: 20px;
     margin: 5px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #00000028;
+    border: 1px solid $border2;
+    // box-shadow: 0px 0px 10px 0px #00000028;
 }
 .card_title {
     font-family: font_M;
